// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Tabbable props 1`] = `
Object {
  "className": "css-1s9nf0t css-63it0p css-jwhr8m bb-Box bb-Tabbable",
  "onClickCapture": [Function],
  "onKeyPressCapture": [Function],
  "onMouseDown": [Function],
  "onMouseDownCapture": [Function],
  "ref": [Function],
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  opacity: 0.5;
}

<p
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Tabbable"
  tabindex="0"
>
  Hello world
</p>
`;

exports[`composition use should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  opacity: 0.5;
}

<div>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-Tabbable"
    tabindex="0"
  >
    Tabbable
  </div>
  <div
    aria-disabled="true"
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-Tabbable"
    disabled=""
    style="pointer-events: none;"
  >
    Disabled
  </div>
  <div
    aria-disabled="true"
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-Tabbable"
    disabled=""
    style="pointer-events: none;"
    tabindex="0"
  >
    Focusable
  </div>
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  opacity: 0.5;
}

<div
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Tabbable"
  tabindex="0"
>
  Tabbable
</div>
`;

exports[`overrides Tabbable.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  opacity: 0.5;
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Tabbable"
  tabindex="0"
>
  Tabbable
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  opacity: 0.5;
}

<div>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-Tabbable"
    tabindex="0"
  >
    Tabbable
  </div>
  <div
    aria-disabled="true"
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-Tabbable"
    disabled=""
    style="pointer-events: none;"
  >
    Disabled
  </div>
  <div
    aria-disabled="true"
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-Tabbable"
    disabled=""
    style="pointer-events: none;"
    tabindex="0"
  >
    Focusable
  </div>
</div>
`;

exports[`theming Tabbable.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  opacity: 0.5;
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Tabbable"
  tabindex="0"
>
  Tabbable
</div>
`;
